assets/css/style.css
/* ... */
.left-area,.right-area{
  width: 200px;
  height: 75%;
  /*background-color: rgba(255,255,255,0.3);*/
  position: relative;
}
.left-area{
  float: left;
}
.right-area{
  float: right;
}
.btn{
  cursor: pointer;
  display: block;
  -webkit-box-sizing: border-box;
          box-sizing: border-box;
  vertical-align: middle;
  width: 60px;
  height: 60px;
  position: absolute;
  top: 80%;
  border-radius: 100px;
  border: 3px solid rgba(0,0,0,0.3);
  text-align: center;
  line-height: 53px;
  font-size: 35px;
  font-weight: 600;
  color: rgba(0,0,0,0.2);
  font-family: Ubuntu;
  -webkit-transition-duration: .3s;
          transition-duration: .3s;
}
.left-area .btn{
  left: 35%;
}
.right-area .btn{
  right: 35%;
}
.btn:hover{
  -webkit-transition-duration: .3s;
          transition-duration: .3s;
  border: 3px solid white;
  background-color: white;
  color: #888;
}
#left-tab,#right-tab{
  width: 300px;
  height: 40px;
  /*background-color: red;*/
  position: absolute;
}
#left-tab{
  position: absolute;
  top: 82.3%;
  left: 70%;
}
#right-tab{
  position: absolute;
  top: 82.3%;
  right: 70%;
}
.left-san{
  display: block;
  float: left;
  width: 0;
  height: 0;
  border-top: 8px solid transparent;
  border-right: 8px solid white;
  border-bottom: 8px solid transparent;
  margin-top: 11px;
}
.right-san{
  display: block;
  float: right;
  width: 0;
  height: 0;
  border-top: 8px solid transparent;
  border-left: 8px solid white;
  border-bottom: 8px solid transparent;
  margin-top: 11px;
}
.left-main{
  display: block;
  max-width: 290px;
  height: 100%;
  border-radius: 7px;
  background-color: white;
  float: left;
  padding: 0 10px;
  -webkit-box-sizing: border-box;
          box-sizing: border-box;
}
.right-main{
  display: block;
  max-width: 290px;
  height: 100%;
  border-radius: 7px;
  background-color: white;
  float: right;
  padding: 0 10px;
  -webkit-box-sizing: border-box;
          box-sizing: border-box;
}
.main{
  display: block;
  overflow: hidden;
  line-height: 40px;
  font-size: 14px;
  /*color: #9A85FF;*/
  font-weight: bold;
}
.self-animated {
  -webkit-animation-duration: .3s;
  animation-duration: .3s;
  -webkit-animation-fill-mode: both;
  animation-fill-mode: both;
}

.post-titlearea span:first-child{
    width: auto;
    height: auto;
    display: block;
    text-align: center;
    position: absolute;
    top: 130px;
    left: 0;
    right: 0;
    margin: 0 auto;
    font-size: 45px;
    font-weight: 550;
    color: white;
    font-family: "Arial","Microsoft YaHei","黑体","宋体",sans-serif;
    /*font-family: 'Kaushan Script', cursive;*/
}
.post-titlearea span:nth-child(2){
    display: block;
    width: auto;
    height: auto;
    text-align: center;
    position: absolute;
    left: 0;
    right: 0;
    margin: 0 auto;
    font-weight: normal;
    color: white;
    font-family: "Arial","Microsoft YaHei","黑体","宋体",sans-serif;
    /*font-family: 'Ubuntu', sans-serif;*/
    top: 280px;
    font-size: 25px;
}
.post-titlearea span:nth-child(3){
    display: block;
    width: auto;
    height: auto;
    text-align: center;
    position: absolute;
    left: 0;
    right: 0;
    margin: 0 auto;
    font-weight: normal;
    color: white;
    font-family: "Arial","Microsoft YaHei","黑体","宋体",sans-serif;
    /*font-family: 'Ubuntu', sans-serif;*/
    top: 330px;
    font-size: 25px;
}
.post-titlearea span:nth-child(4){
    display: block;
    width: auto;
    height: auto;
    text-align: center;
    position: absolute;
    left: 0;
    right: 0;
    margin: 0 auto;
    font-weight: normal;
    color: white;
    /*font-family: 'Ubuntu', sans-serif;*/
    font-family: "Arial","Microsoft YaHei","黑体","宋体",sans-serif;
    top: 350px;
    font-size: 25px;
}
.post-titlearea{
  position: absolute;
  width:80%;
  height: 430px;
  top: 70px;
  left: 0;
  right: 0;
  margin: 0 auto;
}
.post-changearea{
  width: 100%;
  height: 100px;
  /*background-color: black;*/
  position: absolute;
  bottom: 0;
  display: none;
}
.leftchange,.rightchange{
  display: block;
  float: left;
  width: 50%;
  height: 100%;
  -webkit-box-sizing: border-box;
          box-sizing: border-box;
  background-color: white;
}
.leftchange{
  /*border-top-left-radius: 40px;*/
  border-top-right-radius: 40px;
}
.rightchange{
  border-top-left-radius: 40px;
  /*border-top-right-radius: 40px;*/
}
.leftchange span,.rightchange span{
  display: block;
  width: 90%;
  height: 80px;
  margin: 10px 5%;
  font-size: 14px;
  color: #555;
  text-align: center;
  overflow: hidden;
}

/*goto*/
.go{
	width:47px;
	height:100px;
	background-color:#fafbfc;
	position:fixed;
	right:12px;
	bottom:10%;
	z-index: 999;
  border: 1px solid #333;
  border-radius: 7px;
}
.box a{
	text-decoration: none;
}
.box{
	width: 100%;
	height: 50%;
	text-align: center;
  line-height: 50px;
  color:#555;
  font-size: 18px;
  font-weight: bold;
}
.gototop{
  border-bottom: 1px solid #333;
}
.gototop,.gotobottom{
  display: block;
}
.box:hover{
  color: white;
}
.gototop:hover{
  background-color: #333;
  border-top-left-radius: 5px;
  border-top-right-radius: 5px;
}
.gotobottom:hover{
  background-color: #333;
  border-bottom-right-radius: 5px;
  border-bottom-left-radius: 5px;
}

/*share*/
.social-share-wrapper{
  text-align: center;
}
.social-share{
  margin-top: 70px;
}

/*about页面*/
.portraits{
  height: 100px;
  width: 100px;
  border-radius: 100px;
  margin: 0 auto 15px;
  border: 2px solid #e7eaf1;
  cursor: crosshair;
}
.portraits img{
  height: 100px;
  width: 100px;
  border-radius: 100px;
}
.portraits:hover{
  -webkit-animation-name: flip;
  animation-name: flip;
  -webkit-animation-duration: 1s;
  animation-duration: 1s;
  -webkit-animation-fill-mode: both;
  animation-fill-mode: both;
}

.icon {
   width: 2em; height: 2em;
   vertical-align: -0.15em;
   fill: currentColor;
   overflow: hidden;
   margin: 10px 8px;
   color: #345678;
}
/* ... */

